--- a/Day 5/style.css
+++ b/Day 5/style.css
@@ -12,7 +12,7 @@
 }
 .child{
     width:17vw;
-    height: 31vh;
+    height: 30vh;
     background-color: #3c4043;
     border-radius: .8rem;
     margin: 10px;
@@ -28,12 +28,17 @@
     border-radius: 50%;
 }
 .mic{
-    height: 20px;
-    width: 20px;
+    height: 27px;
+    width: 27px;
+    position: absolute;
+    bottom: 25vh;
+    left:14vw;
+    border-radius: 50%;
+    background-color: #333739;
 }
 .name{
     position: absolute;
-    top: 26vh;
+    top: 25vh;
     margin-left: 2vw;
     width: 100%;
 }
